<resources>
    <string name="app_name">SimpleChat</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email address</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_acocount">Don\'t have an acocount?</string>
    <string name="already_have_an_acocount">Already have an acocount?</string>
    <string name="whatsup">WhatsUp</string>
    <string name="profil">Profil</string>
    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="phone">Phone</string>
    <string name="change_avatar">Change avatar</string>
    <string name="take_photo">Take photo</string>
    <string name="from_gallery">From gallery</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="dialog_logout">Do you want to go out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>

</resources>