<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".topMenu.profil.ProfilActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/finish"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:paddingStart="20sp"
            android:paddingTop="20sp"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:text="@string/profil"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/finish"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finish"
            app:layout_constraintVertical_bias="0.0">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20sp"
                android:background="#EBEEF2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_image_btn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="30dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20sp"
                    android:src="@drawable/ic_baseline_person_24" />
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EBEEF2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_backgrount"
                android:hint="@string/email_address"
                android:inputType="textCapWords"
                android:paddingStart="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:text="@string/phone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_edit_text1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_backgrount"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingStart="20dp" />

            <EditText
                android:id="@+id/password_edit_text2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_backgrount"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:paddingStart="20dp"
                android:visibility="invisible" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/update_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="#0AD486"
                app:cardCornerRadius="20dp"
                app:cornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>